try higher-than-real frequency

--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "16e480f1-b04d-47a2-9d44-ef8be64e01ee",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
        "(130, 19)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f9d6ec78-364c-44c6-8181-8e4f33b6a08c",
    "metadata": {},
    "outputs": [
@@ -811,7 +811,7 @@
        "(130, 18)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e53706ce-3b24-4d54-8b5a-51f147e9a9d3",
    "metadata": {},
    "outputs": [],
@@ -863,13 +863,14 @@
     "rollout = []\n",
     "for frame, frame_vel in zip(frames, frames_vels):\n",
     "    frame[3], frame[4], frame[5], frame[6] = frame[6], frame[3], frame[4], frame[5]\n",
+    "    # state = jit_env_reset(m, frame, 20*jp.ones(m.qd_size())) # try\n",
     "    state = jit_env_reset(m, frame, frame_vel)\n",
     "    rollout.append(state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "215ce10e-1fc3-493d-934e-1b6f351cff33",
    "metadata": {
     "scrolled": true
@@ -960,29 +961,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "9261f47c-ac33-49dd-a4fc-d4cb4e7146a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[ 0.        , -6.324409  ,  0.        ],\n",
-       "       [ 0.        , -6.324409  ,  0.        ],\n",
-       "       [ 0.        , -5.948884  ,  0.        ],\n",
-       "       [ 0.        , -7.412592  ,  0.        ],\n",
-       "       [ 0.        , -6.324409  ,  0.        ],\n",
-       "       [ 0.        , -5.948884  ,  0.        ],\n",
-       "       [ 0.        , -7.412592  ,  0.        ],\n",
-       "       [ 0.        , -6.324409  ,  0.        ],\n",
-       "       [ 0.        , -0.9296856 ,  0.        ],\n",
-       "       [ 0.        , -0.07485604,  0.        ],\n",
-       "       [ 0.        , -6.324409  ,  0.        ],\n",
-       "       [ 0.        , -0.9296856 ,  0.        ],\n",
-       "       [ 0.        , -0.07485604,  0.        ]], dtype=float32)"
+       "Array([[-19.03386 ,  20.000011,  20.921593],\n",
+       "       [-18.089993,  20.000011,  40.89932 ],\n",
+       "       [-18.089993,  40.000023,  40.89932 ],\n",
+       "       [-18.089993,  60.000034,  40.89932 ],\n",
+       "       [-18.089993,  20.000011,  40.89932 ],\n",
+       "       [-18.089993,  40.000023,  40.89932 ],\n",
+       "       [-18.089993,  60.000034,  40.89932 ],\n",
+       "       [-18.089993,  20.000011,  40.89932 ],\n",
+       "       [-18.089993,  40.000023,  40.89932 ],\n",
+       "       [-18.089993,  60.00004 ,  40.89932 ],\n",
+       "       [-18.089993,  20.000011,  40.89932 ],\n",
+       "       [-18.089993,  40.000023,  40.89932 ],\n",
+       "       [-18.089993,  60.00004 ,  40.89932 ]], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
