--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "9df33568-0e54-4f7b-9d0d-7f7a20bc9a94",
    "metadata": {},
    "outputs": [],
@@ -1194,8 +1194,9 @@
     "    config = file.read()\n",
     "\n",
     "m = mjcf.loads(config, asset_path='')\n",
-    "# bias_q = jp.zeros(12)\n",
-    "# m = m.replace(actuator=m.actuator.replace(bias_q=bias_q))"
+    "force_range = np.full((12, 2), [-100.0, 100.0], dtype=np.float32)\n",
+    "\n",
+    "m = m.replace(actuator=m.actuator.replace(force_range=force_range))"
    ]
   },
   {
@@ -1552,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2686e820-e0bb-4044-aa90-f32f6f909ea6",
    "metadata": {},
    "outputs": [
@@ -1570,23 +1571,23 @@
        "       [-2.69653 , -0.916298],\n",
        "       [-0.802851,  0.802851],\n",
        "       [-1.0472  ,  4.18879 ],\n",
-       "       [-2.69653 , -0.916298]], dtype=float32), force_range=Array([[-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5]], dtype=float32), gain=Array([100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
+       "       [-2.69653 , -0.916298]], dtype=float32), force_range=array([[-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.]], dtype=float32), gain=Array([100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
        "       100.], dtype=float32), gear=Array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32), bias_q=Array([-100., -100., -100., -100., -100., -100., -100., -100., -100.,\n",
        "       -100., -100., -100.], dtype=float32), bias_qd=Array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32))>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "b2e04911-29a3-4ead-b0a2-77bf6d019638",
    "metadata": {},
    "outputs": [
@@ -1660,7 +1661,7 @@
        "       [-2.69653 , -0.916298]], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,28 +1672,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "e2ce891b-3ab6-4fea-a234-bd03f148cee5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5],\n",
-       "       [-33.5,  33.5]], dtype=float32)"
+       "array([[-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.],\n",
+       "       [-100.,  100.]], dtype=float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
