--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "9df33568-0e54-4f7b-9d0d-7f7a20bc9a94",
    "metadata": {},
    "outputs": [],
@@ -1194,70 +1194,32 @@
     "    config = file.read()\n",
     "\n",
     "m = mjcf.loads(config, asset_path='')\n",
-    "force_range = np.full((12, 2), [-100.0, 100.0], dtype=np.float32)\n",
     "\n",
-    "m = m.replace(actuator=m.actuator.replace(force_range=force_range))"
+    "force_range = np.full((12, 2), [-50.0, 50.0], dtype=np.float32)\n",
+    "bias_qd = -10 * np.ones(12, dtype=np.float32)\n",
+    "m = m.replace(actuator=m.actuator.replace(force_range=force_range, bias_qd=bias_qd))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4b6379c6-e4c0-4e3b-8ffb-06a3d89bb33c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "bias:  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "force:  [  0.       0.     -91.6298   0.       0.     -91.6298   0.       0.\n",
-      " -91.6298   0.       0.     -91.6298]\n",
-      "clipped force:  [  0.    0.  -33.5   0.    0.  -33.5   0.    0.  -33.5   0.    0.  -33.5]\n",
-      "[0.09999833 0.09999833 0.09999833 0.09999833 0.09999833 0.09999833\n",
-      " 0.09999833 0.09999833 0.09999833 0.09999833 0.09999833 0.09999833]\n",
-      "bias:  [ 0.  0. -0. -0.  0. -0.  0.  0. -0. -0.  0. -0.]\n",
-      "force:  [  9.999833   9.999833 -91.6298     9.999833   9.999833 -91.6298\n",
-      "   9.999833   9.999833 -91.6298     9.999833   9.999833 -91.6298  ]\n",
-      "clipped force:  [  9.999833   9.999833 -33.5        9.999833   9.999833 -33.5\n",
-      "   9.999833   9.999833 -33.5        9.999833   9.999833 -33.5     ]\n",
-      "[0.19998667 0.19998667 0.19998667 0.19998667 0.19998667 0.19998667\n",
-      " 0.19998667 0.19998667 0.19998667 0.19998667 0.19998667 0.19998667]\n",
-      "bias:  [ 0.  0. -0.  0.  0. -0.  0.  0. -0.  0.  0. -0.]\n",
-      "force:  [ 19.998667  19.998667 -91.6298    19.998667  19.998667 -91.6298\n",
-      "  19.998667  19.998667 -91.6298    19.998667  19.998667 -91.6298  ]\n",
-      "clipped force:  [ 19.998667  19.998667 -33.5       19.998667  19.998667 -33.5\n",
-      "  19.998667  19.998667 -33.5       19.998667  19.998667 -33.5     ]\n",
-      "[0.29995498 0.29995498 0.29995498 0.29995498 0.29995498 0.29995498\n",
-      " 0.29995498 0.29995498 0.29995498 0.29995498 0.29995498 0.29995498]\n",
-      "bias:  [ 0.  0. -0.  0.  0. -0.  0.  0. -0.  0.  0. -0.]\n",
-      "force:  [ 29.995499  29.995499 -91.6298    29.995499  29.995499 -91.6298\n",
-      "  29.995499  29.995499 -91.6298    29.995499  29.995499 -91.6298  ]\n",
-      "clipped force:  [ 29.995499  29.995499 -33.5       29.995499  29.995499 -33.5\n",
-      "  29.995499  29.995499 -33.5       29.995499  29.995499 -33.5     ]\n",
-      "[0.39989334 0.39989334 0.39989334 0.39989334 0.39989334 0.39989334\n",
-      " 0.39989334 0.39989334 0.39989334 0.39989334 0.39989334 0.39989334]\n",
-      "bias:  [ 0.  0. -0.  0.  0. -0.  0.  0. -0.  0.  0. -0.]\n",
-      "force:  [ 39.989334  39.989334 -91.6298    39.989334  39.989334 -91.6298\n",
-      "  39.989334  39.989334 -91.6298    39.989334  39.989334 -91.6298  ]\n",
-      "clipped force:  [ 33.5  33.5 -33.5  33.5  33.5 -33.5  33.5  33.5 -33.5  33.5  33.5 -33.5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# jit_env_reset = jax.jit(pipeline.init)\n",
-    "# jit_env_step = jax.jit(pipeline.step)\n",
-    "jit_env_reset = pipeline.init\n",
-    "jit_env_step = pipeline.step\n",
+    "# # jit_env_reset = jax.jit(pipeline.init)\n",
+    "# # jit_env_step = jax.jit(pipeline.step)\n",
+    "# jit_env_reset = pipeline.init\n",
+    "# jit_env_step = pipeline.step\n",
     "\n",
-    "rollout = []\n",
-    "rng = jax.random.PRNGKey(seed=1)\n",
-    "state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
-    "for i in range(5):\n",
-    "    rollout.append(state)\n",
-    "    act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
-    "    print(act)\n",
-    "    state = jit_env_step(m, state, act)"
+    "# rollout = []\n",
+    "# rng = jax.random.PRNGKey(seed=1)\n",
+    "# state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
+    "# for i in range(5):\n",
+    "#     rollout.append(state)\n",
+    "#     act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
+    "#     print(act)\n",
+    "#     state = jit_env_step(m, state, act)"
    ]
   },
   {
@@ -1553,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2686e820-e0bb-4044-aa90-f32f6f909ea6",
    "metadata": {},
    "outputs": [
@@ -1571,23 +1533,24 @@
        "       [-2.69653 , -0.916298],\n",
        "       [-0.802851,  0.802851],\n",
        "       [-1.0472  ,  4.18879 ],\n",
-       "       [-2.69653 , -0.916298]], dtype=float32), force_range=array([[-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.]], dtype=float32), gain=Array([100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
+       "       [-2.69653 , -0.916298]], dtype=float32), force_range=array([[-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.],\n",
+       "       [-50.,  50.]], dtype=float32), gain=Array([100., 100., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
        "       100.], dtype=float32), gear=Array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32), bias_q=Array([-100., -100., -100., -100., -100., -100., -100., -100., -100.,\n",
-       "       -100., -100., -100.], dtype=float32), bias_qd=Array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32))>"
+       "       -100., -100., -100.], dtype=float32), bias_qd=array([-10., -10., -10., -10., -10., -10., -10., -10., -10., -10., -10.,\n",
+       "       -10.], dtype=float32))>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "58610037-8678-4ddd-af13-bae46f165641",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1571,7 @@
        "Array([ 7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fd13a6db-eb3a-40c4-8e14-7d8d000c1db2",
    "metadata": {},
    "outputs": [
@@ -1629,7 +1592,7 @@
        "Array([ 6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17], dtype=int32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b2e04911-29a3-4ead-b0a2-77bf6d019638",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1624,7 @@
        "       [-2.69653 , -0.916298]], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,28 +1635,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "e2ce891b-3ab6-4fea-a234-bd03f148cee5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.],\n",
-       "       [-100.,  100.]], dtype=float32)"
+       "Array([[-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5],\n",
+       "       [-33.5,  33.5]], dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "284e9518-9ad0-4286-b53b-597e359e6356",
    "metadata": {},
    "outputs": [
@@ -1715,7 +1678,7 @@
        "       100.], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6253600a-1c47-40ca-b4cd-c6e4f11a98e6",
    "metadata": {},
    "outputs": [
@@ -1736,7 +1699,7 @@
        "Array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "940c00c1-2b21-4944-b3cc-8085ee709340",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1721,7 @@
        "       -100., -100., -100.], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,17 +1732,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "6df959f4-d7e7-436b-b868-3c1bbf17c2a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
+       "array([-10., -10., -10., -10., -10., -10., -10., -10., -10., -10., -10.,\n",
+       "       -10.], dtype=float32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
